css적용해두기

--- a/netflix/index.html
+++ b/netflix/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/header.css">
+
 </head>
 <body>
+    <header>
+        <div class="main-header">
+            <img src="assets/netflix-images/avatar.jpeg">
+        </div>
+    </header>
     
 </body>
 </html>
